<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>BrushDialog</class>
 <widget class="QDialog" name="BrushDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>340</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QDialogButtonBox" name="buttonBox">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>240</y>
     <width>291</width>
     <height>32</height>
    </rect>
   </property>
   <property name="orientation">
    <enum>Qt::Horizontal</enum>
   </property>
   <property name="standardButtons">
    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
   </property>
  </widget>
  <widget class="QLabel" name="labelHeader">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>93</width>
     <height>21</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>13</pointsize>
    </font>
   </property>
   <property name="text">
    <string>Заголовок</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButtonColor">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>70</y>
     <width>321</width>
     <height>31</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>10</pointsize>
    </font>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Выбрать цвет</string>
   </property>
  </widget>
  <widget class="QLabel" name="labelStyle">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>40</y>
     <width>101</width>
     <height>21</height>
    </rect>
   </property>
   <property name="text">
    <string>Стиль:</string>
   </property>
  </widget>
  <widget class="QComboBox" name="comboBoxStyle">
   <property name="geometry">
    <rect>
     <x>120</x>
     <y>40</y>
     <width>211</width>
     <height>24</height>
    </rect>
   </property>
   <property name="currentIndex">
    <number>1</number>
   </property>
   <item>
    <property name="text">
     <string>Без заливки</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Обычный</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Плотность 1</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Плотность 2</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Плотность 3</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Плотность 4</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Плотность 5</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Плотность 6</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Плотность 7</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Гор. штрих</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Верт. штрих</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Клетка</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Диаг. штрих 1</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Диаг. штрих 2</string>
    </property>
   </item>
   <item>
    <property name="text">
     <string>Диаг. штрих 3</string>
    </property>
   </item>
  </widget>
 </widget>
 <tabstops>
  <tabstop>comboBoxStyle</tabstop>
  <tabstop>pushButtonColor</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>BrushDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>BrushDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
